# Seven-Moons

./: CMakeLists.txt  main.cpp
controller/: Extension.hpp  ExtensionManager.hpp
controller/extensions/: EnemiesExtension.hpp  IntroExtension.hpp  MainWindowExtension.hpp  MapExtension.hpp  PlayerExtension.hpp  SelectionExtension.hpp  TermRefreshExtension.hpp
controller/signals/: Signal.hpp  SignalBus.hpp  SimpleSignals.hpp
display/: CWindow.hpp  Colors.hpp  Container.hpp  Display.hpp  MenuWindow.hpp  WindowTree.hpp
display/static_inits/: Colors.cpp
logic/: Character.hpp  Enemy.hpp  GameMap.hpp  GenericStats.hpp  MapAttributes.hpp  MapObject.hpp  PathCalculator.hpp  Player.hpp  Point.hpp  VisibilityCalculator.hpp
res/maps/: prologue1.txt
